--- a/ngapp/src/app/student/home-page/home-page.component.scss
+++ b/ngapp/src/app/student/home-page/home-page.component.scss
@@ -36,6 +36,12 @@ mat-card-title {
 }
 
 a {
-    text-decoration: none; /* Remove underline from the link */
-    cursor: pointer;
+    text-decoration: none;
+}
+
+@media (max-width: 700px) {
+    .dashButton {
+        width: 300px;
+        min-width: 300px;
+    }
 }
