--- a/ngapp/src/app/profile/account-settings/account-settings.component.scss
+++ b/ngapp/src/app/profile/account-settings/account-settings.component.scss
@@ -10,7 +10,7 @@
 .settingsContainer {
     display: flex;
     justify-content: center;
-    gap: 4rem;
+    gap: 3rem;
     flex-wrap: wrap;
 }
 
@@ -42,12 +42,12 @@
     color: var(--delete-red);
     text-align: left;
     padding-left: 20%;
-}
 
-.deleteAccount:hover {
-    color: var(--delete-red-hover);
-    cursor: pointer;
-    text-decoration: underline;
+    &:hover {
+        color: var(--delete-red-hover);
+        cursor: pointer;
+        text-decoration: underline;
+    }
 }
 
 .leaveClassroomButton {
@@ -94,4 +94,11 @@
     appearance: none;
     border-radius: 0.375rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+@media (max-width: 700px) {
+    .settingsValue {
+        width: 175px;
+        word-wrap: break-word;
+    }    
 }
