register profile bug
- 0 years of Irish did not save to the DB
- fixed mobile profile menu css bug

--- a/ngapp/src/app/profile/profile/profile.component.html
+++ b/ngapp/src/app/profile/profile/profile.component.html
@@ -1,6 +1,7 @@
 <mat-sidenav-container class="profileContainer">
   <mat-sidenav
     #drawer
+    [autoFocus]="false"
     [attr.role]="(isMobile$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isMobile$ | async) ? 'over' : 'side'"
     [opened]="!(isMobile$ | async)"
