--- a/ngapp/src/app/nav-bar/about/about.component.html
+++ b/ngapp/src/app/nav-bar/about/about.component.html
@@ -38,7 +38,7 @@
     <div class="paperHeader"> {{ts.l.academic_papers}} </div>
     <mat-accordion multi>
       <mat-expansion-panel >
-        <mat-expansion-panel-header [collapsedHeight]="'100px'">
+        <mat-expansion-panel-header [collapsedHeight]="'auto'" [expandedHeight]="'auto'">
           <mat-panel-title>
               <div><b> Using Speech and NLP Resources to build an iCALL platform for a 
                 minority language, the story of An Scéalaí, the Irish experience to date </b></div>
@@ -52,7 +52,7 @@
           <a href="assets/pdf/ComputEL.pdf" class="fileDownloadBtn" target="_blank">{{ts.l.download}} PDF <i class="fas fa-download"></i></a>
       </mat-expansion-panel>
       <mat-expansion-panel>
-        <mat-expansion-panel-header [collapsedHeight]="'100px'">
+        <mat-expansion-panel-header [collapsedHeight]="'auto'" [expandedHeight]="'auto'">
           <mat-panel-title>
               <div><b> Celtic CALL: strengthening the vital role of education for language transmission </b></div>
           </mat-panel-title>
@@ -65,7 +65,7 @@
           <a href="assets/pdf/CelticCALL.pdf" class="fileDownloadBtn" target="_blank">{{ts.l.download}} PDF <i class="fas fa-download"></i></a>
       </mat-expansion-panel>
       <mat-expansion-panel>
-        <mat-expansion-panel-header [collapsedHeight]="'100px'">
+        <mat-expansion-panel-header [collapsedHeight]="'auto'" [expandedHeight]="'auto'">
           <mat-panel-title>
               <div><b> An Scéalaí: autonomous learners harnessing speech and language technologies </b></div>
           </mat-panel-title>
