--- a/ngapp/src/app/nav-bar/team/team.component.html
+++ b/ngapp/src/app/nav-bar/team/team.component.html
@@ -7,7 +7,7 @@
     <mat-accordion multi>
       <!-- Neasa Ní Chiaráin  -->
       <mat-expansion-panel>
-        <mat-expansion-panel-header [collapsedHeight]="'300px'" [expandedHeight]="'300px'">
+        <mat-expansion-panel-header [collapsedHeight]="'auto'" [expandedHeight]="'auto'" style="padding: 10px;">
           <mat-panel-title>
             <div>
               <div class="name"><b> Neasa Ní Chiaráin </b></div>
@@ -114,7 +114,6 @@
         <mat-card-content>
           <div style="text-align: center;"><i>{{ts.l.abair_pic_description}}</i></div>
         </mat-card-content>
-
       </div>
     </mat-card>
   </div>
