--- a/ngapp/src/app/feedback/story-feedback/story-feedback.component.html
+++ b/ngapp/src/app/feedback/story-feedback/story-feedback.component.html
@@ -4,7 +4,7 @@
     <div (click)="closeFeedback()">
       <i class="fas fa-arrow-left closeFeedbackButton"></i>
     </div>
-    <div style="margin: auto">{{ story?.title }} <span *ngIf="story?.createdWithPrompts" class="madeWithPrompts">{{ts.l.made_using_prompts}}</span></div>
+    <div style="margin: auto">{{ story?.title }} <span *ngIf="story?.createdWithPrompts" class="madeWithPrompts">{{ts.l.made_using_prompts}}</span> <span>({{story?.author}})</span></div>
     <button *ngIf="!feedbackSent" class="sendFeedbackButton" (click)="sendFeedback()" style="margin-left: auto" >
       {{ ts.l.send }} <i class="fas fa-paper-plane"></i>
     </button>
