--- a/ngapp/src/app/nav-bar/about/about.component.scss
+++ b/ngapp/src/app/nav-bar/about/about.component.scss
@@ -36,6 +36,10 @@
   font-size: 12pt;
 }
 
+mat-expansion-panel-header {
+    padding: 20px;
+}
+
 .paperHeader {
   padding-bottom: 10px;
   font-size: 20px;
