--- a/ngapp/src/app/nav-bar/user-guides/user-guides.component.html
+++ b/ngapp/src/app/nav-bar/user-guides/user-guides.component.html
@@ -15,8 +15,8 @@
       <mat-card-title> {{ts.l.video_tutorial}} </mat-card-title>
       <mat-card-subtitle> {{ts.l.watch_following_instructional_video}}</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content style="text-align: center">
-      <iframe width="420" height="300" frameborder="0" allowfullscreen
+    <mat-card-content>
+      <iframe frameborder="0" allowfullscreen
       src="https://www.youtube.com/embed/BOn4lNYAmwA?autoplay=0&mute=0">
       </iframe>
     </mat-card-content>
