angular material - student module

--- a/ngapp/src/app/student/dashboard/dashboard.component.scss
+++ b/ngapp/src/app/student/dashboard/dashboard.component.scss
@@ -1,19 +1,51 @@
-.mat-slide-toggle-content {
-    font-family: "Open Sans" !important;
-}
-.mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
-    background-color: white !important;
-}
-.mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
-    background-color: var(--scealai-green) !important;
-}
-.listenToggle .mat-ripple-element {
-    background-color: var(--scealai-light-green) !important;
-}
 
-.mat-slide-toggle-label {
-    padding-right: 10px;
-}
+// /* TODO(mdc-migration): The following rule targets internal classes of slide-toggle that may no longer apply for the MDC version.*/
+// .mat-slide-toggle-content {
+//     font-family: "Open Sans" !important;
+// }
+// /* TODO(mdc-migration): The following rule targets internal classes of slide-toggle that may no longer apply for the MDC version.*/
+// .mat-mdc-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+//     background-color: white !important;
+// }
+// /* TODO(mdc-migration): The following rule targets internal classes of slide-toggle that may no longer apply for the MDC version.*/
+// .mat-mdc-slide-toggle.mat-checked .mat-slide-toggle-bar {
+//     background-color: var(--scealai-green) !important;
+// }
+// .listenToggle .mat-ripple-element {
+//     background-color: var(--scealai-light-green) !important;
+// }
+
+// /* TODO(mdc-migration): The following rule targets internal classes of slide-toggle that may no longer apply for the MDC version.*/
+// .mat-slide-toggle-label {
+//     //padding-right: 10px;
+// }
+
+// .mat-mdc-slide-toggle.mat-accent {
+//     --mdc-switch-selected-handle-color: white !important;
+//     --mdc-switch-selected-track-color: var(--scealai-green) !important;
+// }
+
+// .mat-mdc-slide-toggle .mdc-form-field .mdc-switch {
+//     --mdc-switch-selected-track-color: green;
+//     --mdc-switch-unselected-track-color: gray;
+  
+//     --mdc-switch-selected-icon-color: yellow;
+//     --mdc-switch-unlected-icon-color: black;
+//   }
+
+// .mat-mdc-slide-toggle.mat-mdc-slide-toggle-checked:not(.mat-disabled) .mdc-switch__shadow {
+//     background-color: rgb(50, 170, 118);
+//     /*replace with your color*/
+//   }
+
+// .mdc-switch.mdc-switch--selected.mdc-switch--checked {
+//     background-color: blue;
+// }
+
+// .mdc-switch.mdc-switch__track {
+//     background-color: red;
+// }
+
 
 .ql-tooltip.synthesis-button.synth-button-word {
     border-bottom-right-radius: 10px;
