--- a/ngapp/src/app/student/story-drawer/story-drawer.component.scss
+++ b/ngapp/src/app/student/story-drawer/story-drawer.component.scss
@@ -56,7 +56,7 @@
     margin-left: auto;
 }
 
-.mat-fab.mat-accent, .mat-mini-fab.mat-accent {
+.mat-mdc-fab.mat-accent, .mat-mdc-mini-fab.mat-accent {
     background-color: var(--scealai-green);
     box-shadow: none;
 }
