no lazy routing

--- a/ngapp/src/app/student/home-page/home-page.component.html
+++ b/ngapp/src/app/student/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="homeContainer">
   <div class="appCards">
-    <mat-card routerLink="/student/dashboard" class="dashButton main">
+    <mat-card routerLink="/dashboard" class="dashButton main">
       <mat-card-header>
         <mat-card-title> {{ ts.l.story_dashboard }} </mat-card-title>
       </mat-card-header>
