--- a/ngapp/src/app/student/dashboard/dashboard.component.html
+++ b/ngapp/src/app/student/dashboard/dashboard.component.html
@@ -141,7 +141,7 @@
       <span class="menuButton material-symbols-outlined" (click)="storyDrawer.toggle()" >menu</span >
       <div class="wordCount">{{ ts.l.word_count }}: {{ wordCount }}</div>
       <!-- QUILL EDITOR AND TOOLBAR-->
-      <quill-editor
+      <!-- <quill-editor
         [modules]="quillToolbar"
         placeholder=""
         [preserveWhitespace]="true"
@@ -150,7 +150,7 @@
         (onContentChanged)="onContentChanged($event)"
         (onEditorCreated)="onEditorCreated($event)"
         (onSelectionChanged)="getWordCountSelectedText($event)"
-      ></quill-editor>
+      ></quill-editor> -->
     </div>
 
     <!-- NO STORIES MESSAGE-->
