--- a/ngapp/src/app/teacher/classroom-drawer/classroom-drawer.component.scss
+++ b/ngapp/src/app/teacher/classroom-drawer/classroom-drawer.component.scss
@@ -59,7 +59,8 @@
     margin-left: auto;
 }
 
-.mat-fab.mat-accent, .mat-mini-fab.mat-accent {
+// add classroom button
+.mat-mdc-fab.mat-accent, .mat-mdc-mini-fab.mat-accent {
     background-color: var(--scealai-green);
     box-shadow: none;
 }
